clCardView - added style = MainConstraintStyle as in Dark Mode it was displaying black

--- a/app/src/main/res/layout/activity_main_activity3_api.xml
+++ b/app/src/main/res/layout/activity_main_activity3_api.xml
@@ -23,6 +23,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:id="@+id/toolbarTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -33,6 +34,20 @@
                 android:textStyle="normal" />
 
         </androidx.appcompat.widget.Toolbar>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:layout_constraintTop_toTopOf="@id/toolbar"
+            app:layout_constraintEnd_toStartOf="@id/ivLogout"
+            android:layout_marginEnd="@dimen/_10sdp"
+            app:layout_constraintBottom_toBottomOf="@id/toolbar"
+            android:text="@string/version"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_11ssp"
+            android:textStyle="normal" />
 
         <ImageView
             android:id="@+id/ivLogout"
@@ -101,6 +116,7 @@
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/clCardView"
+                        style="@style/MainConstraintStyle"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
@@ -355,6 +371,7 @@
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/clCardViewAssigned"
+                        style="@style/MainConstraintStyle"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
@@ -476,6 +493,7 @@
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/clCardView2"
+                        style="@style/MainConstraintStyle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingBottom="@dimen/_10sdp">
