--- a/app/src/main/res/layout/activity_payment_info_of_customer.xml
+++ b/app/src/main/res/layout/activity_payment_info_of_customer.xml
@@ -104,6 +104,7 @@
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/clCardView"
+                            style="@style/MainConstraintStyle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingBottom="@dimen/_10sdp">
