--- a/app/src/main/res/layout/activity_visit_npa_payment_mode.xml
+++ b/app/src/main/res/layout/activity_visit_npa_payment_mode.xml
@@ -106,6 +106,7 @@
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/clCardView"
+                        style="@style/MainConstraintStyle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingBottom="@dimen/_10sdp">
